--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -9,6 +9,9 @@ body {
 	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
 	color: #424242;
 	line-height: 1.4;
+	background-color: black;
+	display: flex;
+	justify-content: center;
 }
 
 /* Fonts */
@@ -16,6 +19,13 @@ h1 {
 	font-family: "rooney-web", "AmericanTypewriter", Rockwell, serif;
 	font-size: 2.5em;
 	font-weight: bold;
+}
+
+h2 {
+	vertical-align: middle;
+	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	font-size: 1.7em;
+	font-weight: normal;
 }
 
 .container {
@@ -39,4 +49,145 @@ h1 {
   light grey: #eaeaea;
 */
 
-/* Your CSS code goes here */
+/* My CSS is below! */
+
+/* Styling for main element */
+
+main {
+	background-color: white;
+	width: 600px;
+	height: 700px;
+	margin-top: 100px;
+}
+
+@media (max-height: 700px) {
+	main {
+		height: 100%;
+	}
+}
+
+/* Styling for speech bubble */
+
+.speech-bubble {
+	margin-top: 4%;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 13%;
+	padding: 26px;
+	position: relative;
+	background: #424242;
+	border-radius: .4em;
+	color: white;
+	text-align: center;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 85%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-top-color: #424242;
+	border-bottom: 0;
+	margin-left: -20px;
+	margin-bottom: -10px;
+}
+
+/* Styling for progress bar */
+
+.progress-box {
+	box-sizing: border-box;
+	margin-top: 4%;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 4%;
+  border: 2px solid #eaeaea;
+	align: center;
+}
+
+.progress {
+	box-sizing: border-box;
+	height: 100%;
+	background-color:#EF5F3C;
+	width:72%;
+}
+
+/* Styling for main component */
+
+.border-box {
+  box-sizing: border-box;
+	margin-left: 5%;
+	margin-right: 5%;
+	padding: 30px;
+	height: 55%;
+	width: auto;
+  border: 2px solid #eaeaea;
+	align: center;
+	box-shadow: 0px 3px #eaeaea;
+}
+
+.description {
+  color: #777;
+	font-size: 1.6em;
+}
+
+.description bold {
+	font-weight: bolder;
+  color: #EF5F3C;
+}
+
+.whygive {
+	color:#20A1D4;
+	font-size:1.6em;
+}
+
+/* Styling for buttons */
+
+.button-box {
+	display: flex;
+	flex-direction: row;
+	width: auto;
+}
+
+.button {
+	box-sizing: border-box;
+	margin-top: 4%;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 5%;
+	width: 45%;
+	padding: 30px;
+	border: 2px solid #eaeaea;
+	align: center;
+	box-shadow: 0px 3px #eaeaea;
+	border-radius: 5px;
+	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
+	color: #777;
+	text-align: center;
+}
+
+.button.give {
+	color:white;
+	background-color:#1CBC2C;
+	font-size:1.6em;
+	box-shadow:none;
+	border:none;"
+}
+
+.button.value {
+	font-size:1.6em;
+	text-align:left;
+	box-shadow:none;
+}
+
+.button.friends {
+	margin-left: 3%;
+	font-size: 1.5em;
+}
+
+.button.save {
+	margin-right: 3%;
+	font-size: 1.5em;
+}
